kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extract-table-ui
spec:
  selector:
    matchLabels:
      app: extract-table-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: extract-table-ui
    spec:
      containers:
        - name: dashboard
          image: inseefrlab/extract-table-ui:main
          imagePullPolicy: Always
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "5Gi"
              cpu: "10000m"
