kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extract-table-ui
spec:
  type: LoadBalancer
  selector:
    app: extract-table-ui
  ports:
    - name: streamlit-port
      protocol: TCP
      port: 80
      targetPort: 8501
